--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,12 @@
     <title>长草颜团子</title>
 </head>
 <body>
-<h4>我的CSDN访问量统计</h4>
-<a href="https://blog.csdn.net/wozniakzhang">长草颜团子的博客</a></br>
-CSDN访问总数:<a th:text="${VisitsNum}"></a></br>
-该时段访问人数:<a th:text="${amount}"></a>
+<h4 style="color: dodgerblue">我的CSDN访问量统计 <a href="https://blog.csdn.net/wozniakzhang">长草颜团子的博客</a></h4>
+
+
+<img src="pic.png" height="514" width="516"/></br>
+<b style="color: dodgerblue">CSDN访问总数:<a th:text="${VisitsNum}"></a></b> </br>
+<b style="color: dodgerblue">该时段访问人数:<a th:text="${amount}"></a></b>
 
 </body>
 </html>
