进一步完善

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,12 +5,24 @@
     <title>长草颜团子</title>
 </head>
 <body>
-<h4 style="color: dodgerblue">我的CSDN访问量统计 <a href="https://blog.csdn.net/wozniakzhang">长草颜团子的博客</a></h4>
-
-
-<img src="pic.png" height="514" width="516"/></br>
-<b style="color: dodgerblue">CSDN访问总数:<a th:text="${VisitsNum}"></a></b> </br>
-<b style="color: dodgerblue">该时段访问人数:<a th:text="${amount}"></a></b>
+<br>
+<div style="text-align: center">
+    <h2 style="color: dodgerblue">欢迎去团子的博客逛逛</h2>
+    <h2><a href="https://blog.csdn.net/wozniakzhang" style="color: blue">草民的博客(点我)</a></h2>
+    <h2><a href="http://www.12dong.cn/" style="color: blue">长草颜团子发祥地(点我)</a></h2>
+    <img src="pic.png" height="345" width="411"/></br>
+    <h2 style="color: dodgerblue">团子博客流量:<a th:text="${VisitsNum}"></a></h2>
+    <h2 style="color: dodgerblue">该时段网络水军人数:<a th:text="${amount}"></a></h2>
+    <h2 style="color: dodgerblue">您是第今天第:&nbsp;&nbsp;<a th:text="${sum}" style="color:orangered"></a>&nbsp;&nbsp;位访问者,大祥在这感谢您的支持!</h2>
+    <h3 style="color: dodgerblue">&nbsp;&nbsp;&nbsp;&nbsp;舍不得孩子套不着狼
+        释义：
+        意思是要打到狼，就要不怕跑路，不怕浪费诱饵。用来比喻要达到某一目的必须付出相应的代价，其中孩子指的是有目的性地引人上钩的食物或者物品。
+        这是因为狼生性狡猾，且体格强壮，能奔善跑，一旦被猎人发现，它不是东躲西藏，就是逃之夭夭。猎人若想逮住它，往往要翻山越岭、跑许多山路；而爬山路是非常费鞋子的一件事情，再加上古人脚上穿的多是草鞋、布鞋，很不耐磨。所以，在古时候，人们往往要在磨破一两双鞋子之后才有可能捕捉到狼，如果舍不得费这一两双鞋子就很难捕到狼。
+        原来，在古汉语中是没有j、q、x这三个音的，在古汉语中“鞋子”不读作“xie子”，而是读作“hai子”。时间一长，也就被误记为“舍不得孩子套不着狼”了。
+        综上所述:四川人说的孩子就是孩子
+    </h3><br>
+    <h3 style="color: dodgerblue">样式就先这样吧,有空再写个样式</h3>
+</div>
 
 </body>
 </html>
