最后优化描述

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,12 +7,12 @@
 <body>
 <br>
 <div style="text-align: center">
-    <h2 style="color: dodgerblue">欢迎去团子的博客逛逛</h2>
-    <h2><a href="https://blog.csdn.net/wozniakzhang" style="color: blue">草民的博客(点我)</a></h2>
+    <h2 style="color: dodgerblue">欢迎去团子的的粉丝基地逛逛</h2>
     <h2><a href="http://www.12dong.cn/" style="color: blue">长草颜团子发祥地(点我)</a></h2>
+    <h2><a href="https://blog.csdn.net/wozniakzhang" style="color: blue">神经病大本营基地(点我)</a></h2>
     <img src="pic.png" height="345" width="411"/></br>
-    <h2 style="color: dodgerblue">团子博客流量:<a th:text="${VisitsNum}"></a></h2>
-    <h2 style="color: dodgerblue">该时段网络水军人数:<a th:text="${amount}"></a></h2>
+    <h2 style="color: dodgerblue">基地访问次数:<a th:text="${VisitsNum}"></a></h2>
+    <h2 style="color: dodgerblue">该时段在基地的网络水军人数:&nbsp;<a th:text="${amount}"></a></h2>
     <h2 style="color: dodgerblue">您是第今天第:&nbsp;&nbsp;<a th:text="${sum}" style="color:orangered"></a>&nbsp;&nbsp;位访问者,大祥在这感谢您的支持!</h2>
     <h3 style="color: dodgerblue">&nbsp;&nbsp;&nbsp;&nbsp;舍不得孩子套不着狼
         释义：
@@ -21,7 +21,7 @@
         原来，在古汉语中是没有j、q、x这三个音的，在古汉语中“鞋子”不读作“xie子”，而是读作“hai子”。时间一长，也就被误记为“舍不得孩子套不着狼”了。
         综上所述:四川人说的孩子就是孩子
     </h3><br>
-    <h3 style="color: dodgerblue">样式就先这样吧,有空再写个样式</h3>
+    <h3 style="color: dodgerblue">样式就先这样吧,有空再写个样式,预知后事如何,先die了再说</h3>
 </div>
 
 </body>
