--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 <br>
 <div style="text-align: center">
-    <h2 style="color: dodgerblue">欢迎去团子的的粉丝基地逛逛</h2>
+    <h2 style="color: dodgerblue">欢迎去团子的粉丝基地逛逛</h2>
     <h2><a href="http://www.12dong.cn/" style="color: blue">长草颜团子发祥地(点我官网)</a></h2>
     <h2><a href="https://i.snssdk.com/rogue/ugc/profile/?version_code=725&version_name=70205&user_id=62265224956&media_id=1570717608821762&request_source=1&active_tab=dongtai&device_id=65&app_name=news_article" style="color: blue">长草颜团子头条(点我)</a></h2>
     <h2><a href="https://blog.csdn.net/wozniakzhang" style="color: blue">神经病大本营基地(点我)</a></h2>
